# templateOpenGl

./: .gitignore
myproject/: CMakeLists.txt  test.cpp
myproject/include/: utils.h
myproject/src/: utils.cpp
